Hotový bonusový úkol

--- a/style.css
+++ b/style.css
@@ -16,4 +16,102 @@ html { box-sizing: border-box; }
 
 body {
 	background-color: #bdc3c7;
+	margin: 0;
+	padding: 0;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 14px;
+	color: #bdc3c7;
 }
+
+.profil {
+	width: 250px;
+	padding: 180px 0 0 0;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	background-color: #31363b;
+	box-shadow: 5px 5px 8px #3f464d;
+}
+
+.foto {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+
+.logo {
+	background-color: #b92e81;
+	border-radius: 50%;
+	position: absolute;
+	top: 142px;
+	right: 10%;
+	box-shadow: 5px 5px 8px black;
+}
+
+.jmeno {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;
+	color: white;
+}
+
+.obsah {
+	padding: 0 20px;
+}
+
+.odkazy {
+	padding: 0;
+	margin-bottom: 0;
+}
+
+.odkazy li {
+	display: inline-block;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.portfolio {
+	width: 100%;
+	border-bottom: 1px solid #3f464d;
+	border-top: 1px solid #3f464d;
+	margin-top: 20px;
+}
+
+.facebook {
+	width: 50%;
+	border-right: 1px solid #3f464d;
+}
+
+.twitter {
+	width: 50%;
+}
+
+.portfolio a,
+.facebook a,
+.twitter a {
+	font-family: 'Montserrat', sans-serif;
+	text-decoration: none;
+	color: #bdc3c7;
+	display: block;
+	padding: 10px;
+	font-weight: bold;
+}
+
+.portfolio a:hover {
+	background-color: #e74c3c;
+}
+
+.facebook a:hover {
+	background-color: #3b5998;
+}
+
+.twitter a:hover {
+	background-color: #1da1f2;
+}
+
+.portfolio a:hover,
+.facebook a:hover,
+.twitter a:hover {
+	color: white;
+}
+
